--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,8 +5,60 @@
     padding: 0;
     border: none;
 }
+
 body {
     font-family: Lato, sans-serif;
     font-weight: 300;
     color: #514438;
+    background-color: #F2E4D8;
+}
+
+/* header style */
+
+h1, h2 {
+    font-family: Oswald, sans-serif;
+    text-transform: uppercase;
+    letter-spacing: 3px;
+    color: #514438;
+}
+
+header {
+    width: 100%;
+    margin: auto;
+    padding: 20px 0;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background-color: #C4A689;
+}
+
+#logo {
+    cursor: pointer;
+    text-decoration: none;
+    padding-left: 20px;
+}
+
+nav {
+    padding-right: 20px;
+}
+
+nav ul li {
+    display: inline-block;
+    list-style: none;
+    margin: 0 20px;
+}
+
+nav ul li a {
+    text-decoration: none;
+    color: #514438;
+    font-size: 150%;
+    font-weight: bold;
+}
+
+nav ul li a:hover {
+    border-bottom: 1px solid #514438;
+}
+
+.active {
+    border-bottom: 1px solid #514438;
 }
