--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,6 +23,10 @@ h1, h2 {
 }
 
 header {
+    position: fixed;
+    z-index: 1000;
+    top: 0;
+    left: 0;
     width: 100%;
     margin: auto;
     padding: 20px 0;
@@ -62,4 +66,58 @@ nav ul li a:hover{
 
 .active {
     border-bottom: 1px solid #514438;
+}
+
+/* main style */
+
+#main-outer {
+    height: 800px;
+    width: 100%;
+    overflow: hidden;
+
+    position: relative;
+}
+#main-text, #main-text h2{
+    color: #fff;
+}
+
+#main-image {
+    height: 800px;
+    width: 100%;
+    background: url("../images/main-image.jpeg") no-repeat center center;
+
+    /* animates zoom effect on loading page */
+    animation-name: main-zoom;
+    animation-duration: 5s;
+    animation-fill-mode: forwards;
+}
+
+/* creates the level of zoom for the hero image */
+@keyframes main-zoom {
+    from {
+        transform: scale(1);
+    }
+
+    to {
+        transform: scale(1.1);
+    }
+}
+
+#main-text {
+    font-size: 130%;
+    font-family: Oswald, sans-serif;
+    text-transform: uppercase;
+    letter-spacing: 4px;
+
+    width: 300px;
+    height: 200px;
+
+    padding: 40px;
+
+    background-color: rgba(81,68,56, .7);
+
+    bottom: 30px;
+    right: 150px;
+
+    position: absolute;
 }
