--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -85,6 +85,7 @@ nav ul li a:hover{
     height: 800px;
     width: 100%;
     background: url("../images/main-image.jpeg") no-repeat center center;
+    background-size: cover;
 
     /* animates zoom effect on loading page */
     animation-name: main-zoom;
