--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -123,6 +123,7 @@ nav ul li a:hover{
     position: absolute;
 }
 
+/* about us */
 
 .about {
     display: flex;
@@ -168,8 +169,34 @@ nav ul li a:hover{
     justify-content: center;
 }
 
+/* our classes */
+
 #our-classes h2 {
     padding: 40px;
     display: flex;
     justify-content: center;
 }
+
+table {
+    width: 100%;
+    text-align: center;
+}
+
+table th {
+    background-color: #C4A689;
+    border: 1px solid #514438;
+}
+
+table td {
+    border: 1px solid #514438;
+
+}
+
+.dark {
+    background-color: #C4A689;
+}
+
+.light {
+    background-color:#F2E4D8;
+}
+
