--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,7 +15,8 @@ body {
 
 /* header style */
 
-h1, h2 {
+h1,
+h2 {
     font-family: Oswald, sans-serif;
     text-transform: uppercase;
     letter-spacing: 3px;
@@ -59,9 +60,9 @@ nav ul li a {
     font-weight: bold;
 }
 
-nav ul li a:hover{
+nav ul li a:hover {
     border-bottom: 1px solid #F2E4D8;
-    color:  #F2E4D8;
+    color: #F2E4D8;
 }
 
 .active {
@@ -77,7 +78,9 @@ nav ul li a:hover{
 
     position: relative;
 }
-#main-text, #main-text h2{
+
+#main-text,
+#main-text h2 {
     color: #fff;
 }
 
@@ -109,21 +112,20 @@ nav ul li a:hover{
     font-family: Oswald, sans-serif;
     text-transform: uppercase;
     letter-spacing: 4px;
-
     width: 300px;
     height: 200px;
-
     padding: 40px;
-
-    background-color: rgba(81,68,56, .7);
-
+    background-color: rgba(81, 68, 56, .7);
     bottom: 30px;
     right: 150px;
-
     position: absolute;
 }
 
 /* about us */
+
+#about-us {
+    background-color: #514438;
+}
 
 .about {
     display: flex;
@@ -132,17 +134,17 @@ nav ul li a:hover{
 
 #about-image1 {
     background: url(../images/about-1.jpeg) no-repeat center center;
-    background-size: cover;
+    background-size: contain;
 }
 
 #about-image2 {
     background: url(../images/about-2.jpeg) no-repeat center center;
-    background-size: cover;
+    background-size: contain;
 }
 
 #about-image3 {
     background: url(../images/about-3.jpeg) no-repeat center center;
-    background-size: cover;
+    background-size: contain;
 }
 
 .about-image {
@@ -167,6 +169,7 @@ nav ul li a:hover{
     padding: 40px;
     display: flex;
     justify-content: center;
+    color: #F2E4D8;
 }
 
 /* our classes */
@@ -197,6 +200,63 @@ table td {
 }
 
 .light {
-    background-color:#F2E4D8;
+    background-color: #F2E4D8;
 }
 
+
+
+/* For larger and medium screens size from 1200px wide and down */
+
+@media screen and (max-width: 1200px) {
+
+    .about {
+        height: 400px;
+    }
+
+}
+
+
+
+/* For medium screens size from 950px wide and down */
+@media screen and (max-width: 950px) {
+    .about {
+        height: 400px;
+        display: block;
+    }
+
+    #about-image1 {
+        background-size: cover;
+        margin-top: 60px;
+    }
+
+    #about-image2 {
+        background-size: cover;
+        margin-top: 250px;
+    }
+
+    #about-image3 {
+        background-size: cover;
+        margin-top: 60px;
+    }
+
+    .about-image {
+        width: 100%;
+        height: 400px;
+    }
+
+    .about-text {
+        width: 100%;
+    }
+
+    #about-text2 {
+        margin-top: 60px;
+    }
+
+    #about-text3 {
+        margin-top: 250px;
+    }
+
+    #our-classes {
+        margin-top: 200px;
+    }
+}
