--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -164,14 +164,15 @@ nav ul li a:hover {
     background-color: #514438;
     color: #F2E4D8;
     display: flex;
-    align-items: center;
+    justify-content: space-evenly;
+    flex-direction: column;
     width: 50%;
 }
 
 .about-text p {
     padding: 0px 80px;
     text-align: center;
-    font-size: 180%;
+    font-size: 200%;
 }
 
 #about-us h2 {
@@ -244,7 +245,7 @@ footer {
 
 .footer-left {
     margin-left: 40px;
-    text-align: center;
+    text-align: left;
 }
 
 .footer-left a {
@@ -261,6 +262,10 @@ footer {
     
     .about {
         height: 400px;
+    }
+
+    .about-text p {
+        font-size: 160%;
     }
 
     /* footer */
