--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -260,6 +260,19 @@ footer {
     text-decoration: none;
 }
 
+/* gallery */
+
+#photos  {
+    margin-top: 120px;
+    line-height: 0;
+    column-count: 4;
+    column-gap: 0;
+}
+
+#photos img {
+    width: 100%;
+}
+
 
 
 /* For larger and medium screens size from 1200px wide and down */
