--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -283,7 +283,6 @@ footer {
 @media screen and (max-width: 1200px) {
 
     /* main */
-    
     .about {
         height: 400px;
     }
@@ -297,12 +296,39 @@ footer {
         font-size: 200%;
     }
 
+    /* gallery */
+    #photos  {
+        line-height: 3;
+        column-count: 2;
+        column-gap: 1;
+    }
+
 }
 
 
 
 /* For medium screens size from 950px wide and down */
 @media screen and (max-width: 950px) {
+    /* header */
+    header {
+        display: block;
+    }
+
+    header a {
+        width: 100%;
+        justify-content: center;
+    }
+
+    nav {
+        width: 100%;
+    }
+
+    nav ul {
+        display: flex;
+        justify-content: space-between;
+    }
+    }
+    
 
     /* main */
 
@@ -361,5 +387,11 @@ footer {
     .footer-right {
         width: 60%;
         margin-right: 0;
+    }
+
+    /* gallery */
+    #photos  {
+        line-height: 3;
+        column-count: 1;
     }
 }
