--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -226,6 +226,22 @@ table td a {
     background-color: #F2E4D8;
 }
 
+.register-button {
+    margin: 10px;
+    border-radius: 2px;
+    padding: 10px 30px;
+    text-align: center;
+    font-size: 100%;
+    background-color: #514438;
+    color: #F2E4D8;
+    float: right;
+}
+
+.register-button:hover {
+    background-color: #F2E4D8;
+    color: #514438;
+}
+
 /* footer */
 
 footer {
