--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -308,6 +308,10 @@ footer {
     }
 
     /* footer */
+    .footer-right {
+        margin: 0 40px;
+    }
+
     .footer-right i {
         font-size: 200%;
     }
@@ -410,7 +414,7 @@ footer {
 
     .footer-right {
         width: 60%;
-        margin-right: 0;
+        margin: 0;
     }
 
     /* gallery */
