--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@1,300&family=Oswald&display=swap');
+@import url('http://fonts.cdnfonts.com/css/felix-titling') ;
 
 * {
     margin: 0;
@@ -52,7 +53,7 @@ header {
 }
 
 header a h1 {
-    font-family: Felix Titling;
+    font-family: 'Felix Titling', sans-serif;
 }
 
 nav {
