--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -312,7 +312,7 @@ footer {
 
 .contact-form {
     margin:150px 10% 0 0;
-    color: #F2E4D8;
+    color: #514438;
     background-color: rgba(196, 166, 137, 0.7);
     max-width: 400px;
     position: absolute;
@@ -332,7 +332,7 @@ footer {
 
 .text-input {
     background: transparent;
-    color: #F2E4D8;
+    color: #514438;
     width: 100%;
     height: 25px;
     margin: 5px 0 20px 0;
@@ -349,11 +349,11 @@ footer {
     background: transparent;
     border: 1px solid #F2E4D8;
     border-radius: 2px;
-    color: #F2E4D8;
+    color: #514438;
 }
 
 ::placeholder {
-    color: #F2E4D8;
+    color: #514438;
 }
 
  
