--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -232,6 +232,7 @@ table td {
 
 .register-button {
     margin: 10px;
+    text-decoration: none;
     border-radius: 2px;
     padding: 10px 30px;
     text-align: center;
