fix responsive for register button

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -496,7 +496,11 @@ footer {
     /* register-button */
     .register-button {
         margin: 10px auto;
-        width: 100%;
+        padding: 10px 156px;
+    }
+
+    .Join-classes {
+        flex-direction: column;
     }
     
 
