fix css media for contact page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -602,3 +602,9 @@ footer {
         height: 415px;
      }
 }
+
+@media screen and (max-width: 444px)  {
+    html {
+        width: 500px;
+    }
+}
